Get tag list showing and hiding on mobile correctly

--- a/src/scss/vapor/blog.scss
+++ b/src/scss/vapor/blog.scss
@@ -230,4 +230,10 @@
         margin-top: 10px;
         margin-bottom: 10px;
     }
+
+    .tag-list-collapse {
+        @include media-breakpoint-up(lg) {
+            display: block !important;
+        }
+    }
 }
